NetBSD Problem Report #50793

From www@NetBSD.org  Fri Feb 12 16:50:05 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 08BC67ABF2
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 12 Feb 2016 16:50:05 +0000 (UTC)
Message-Id: <20160212165004.2E2817ACB9@mollari.NetBSD.org>
Date: Fri, 12 Feb 2016 16:50:04 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/arc/stand/boot/disk.c:131: botched va_* handling ?
X-Send-Pr-Version: www-1.0

>Number:         50793
>Category:       port-arc
>Synopsis:       src/sys/arch/arc/stand/boot/disk.c:131: botched va_* handling ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    port-arc-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Feb 12 16:55:00 +0000 2016
>Closed-Date:    Sun Feb 14 18:06:16 +0000 2016
>Last-Modified:  Sun Feb 14 18:06:16 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160212
>Organization:
>Environment:
>Description:
$ fgrep va_ src/sys/arch/arc/stand/boot/disk.c
	va_list ap;
	va_start(ap, f);
	device = va_arg(ap, char *);
$

No call to va_end anywhere. Suggest add.  

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50793 CVS commit: src/sys/arch/arc/stand/boot
Date: Sun, 14 Feb 2016 18:01:45 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sun Feb 14 18:01:45 UTC 2016

 Modified Files:
 	src/sys/arch/arc/stand/boot: disk.c

 Log Message:
 Add missing va_end. PR 50793 from David Binderman.


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.7 src/sys/arch/arc/stand/boot/disk.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 14 Feb 2016 18:06:16 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.