Add missing va_end. PR 50793 from David Binderman.